--- a/ch01/1_1.ipynb
+++ b/ch01/1_1.ipynb
@@ -4,105 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 수학과 파이썬 복습"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 수학과 파이썬 복습\n",
     "## 백터와 행렬"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n"
+      "[1 2 3]\n",
+      "<class 'numpy.ndarray'>\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
+    "x = np.array([1,2,3]) # 행 백터, 원소 3개 \n",
     "\n",
-    "x = np.array([1, 2, 3])\n",
+    "print((x))\n",
     "print(type(x))\n",
-    "x.__class__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3,)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.shape[0]"
+    "y = np.array([[1], [2], [3]])\n",
+    "print(y)"
    ]
   },
   {
@@ -113,7 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "(3,)"
       ]
      },
      "execution_count": 4,
@@ -122,28 +52,27 @@
     }
    ],
    "source": [
-    "x.ndim"
+    "x.shape # x의 \"형상\" 원소가 3개, return type tuple, "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 3)"
+       "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "W = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "W.shape"
+    "x.ndim # 1차원이라 1로 리턴"
    ]
   },
   {
@@ -154,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "(2, 3)"
       ]
      },
      "execution_count": 8,
@@ -163,7 +92,28 @@
     }
    ],
    "source": [
-    "W.ndim"
+    "W = np.array([[1,2,3], [4,5,6]]) # 2행 3열, tuple (2,3)\n",
+    "W.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W.ndim #2-dimension \"2\" and \"3\" from W.shape"
    ]
   },
   {
@@ -175,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,20 +135,21 @@
        "       [ 7,  9, 11]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "W = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "X = np.array([[0, 1, 2], [3, 4, 5]])\n",
-    "W + X"
+    "import numpy as np\n",
+    "W = np.array([[1,2,3], [4,5,6]])\n",
+    "X = np.array([[0,1,2], [3,4,5]])\n",
+    "W+X # 멤버별 합\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,72 +159,29 @@
        "       [12, 20, 30]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "W * X"
+    "W*X # 멤버별 곱"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 브로드 케스트"
+    "## 브로드 캐스트"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[10, 20],\n",
-       "       [30, 40]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "A = np.array([[1, 2], [3, 4]])\n",
-    "A * 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[10, 40],\n",
-       "       [30, 80]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = np.array([[1, 2], [3, 4]])\n",
-    "b = np.array([10, 20])\n",
-    "A * b"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 벡터의 내적과 행렬의 곱 "
+    "import numpy as np"
    ]
   },
   {
@@ -284,7 +192,8 @@
     {
      "data": {
       "text/plain": [
-       "32"
+       "array([[10, 20],\n",
+       "       [30, 40]])"
       ]
      },
      "execution_count": 13,
@@ -293,9 +202,53 @@
     }
    ],
    "source": [
-    "a = np.array([1, 2, 3])\n",
-    "b = np.array([4, 5, 6])\n",
-    "np.dot(a, b)"
+    "A = np.array([[1,2], [3,4]]) #2차원\n",
+    "A* 10 # \"10\"은 0 차원 (scalar)이기 떄문에 에러를 내야하나 브로드캐스트 덕분에 scalar 곱셈으로 됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([1,2,3])\n",
+    "b = np.array([4,5,6])\n",
+    "np.dot(A,b) # dot product \"내적\" 각각 원소별로 곱해서 합친다 1*4 + 2*5 + 3*6 = 4+10+18 = 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[19, 22],\n",
+       "       [43, 50]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1,2], [3,4]])\n",
+    "B = np.array([[5,6], [7,8]])\n",
+    "np.dot(A,B) #행렬의 곱"
    ]
   },
   {
@@ -307,7 +260,8 @@
      "data": {
       "text/plain": [
        "array([[19, 22],\n",
-       "       [43, 50]])"
+       "       [43, 50],\n",
+       "       [67, 78]])"
       ]
      },
      "execution_count": 18,
@@ -316,9 +270,9 @@
     }
    ],
    "source": [
-    "A = np.array([[1, 2], [3, 4]])\n",
-    "B = np.array([[5, 6], [7, 8]])\n",
-    "np.dot(A, B)"
+    "A = np.array([[1,2], [3,4], [5,6]]) #(3,2)\n",
+    "B = np.array([[5,6], [7,8]]) # (2,2)\n",
+    "np.dot(A,B) #행렬의 곱 (3,2)"
    ]
   },
   {
@@ -345,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
