--- a/ch02/2_3.ipynb
+++ b/ch02/2_3.ipynb
@@ -4,50 +4,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 파이썬으로 말뭉치 전처리 하기"
+    "## 파이썬으로 말뭉치 전처리 하기 (말뭉치 corpus 사람이 쓰는 단어들의 집합)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = 'You say goodbye and I say hello.'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = text.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = text.replace('.', ' .')"
+    "text = 'You say goodbye and I say hello.' # 말뭉치 하나"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = text.lower() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = text.replace('.', ' .') # 구두점을 따로 분리, 구두점도 단어로 인식하기 때문 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'you say goodbye and i say hello .'"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
    "source": [
@@ -56,27 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = text.split(' ')"
+    "words = text.split(' ') # 각 단어로 분리"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['you', 'say', 'goodbye', 'and', 'i', 'say', 'hello', '.']"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
    "source": [
@@ -92,34 +92,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "word_to_id = {}\n",
-    "id_to_word = {}\n",
+    "word_to_id = {} \n",
+    "id_to_word = {} \n",
     "\n",
     "for word in words:\n",
     "    if word not in word_to_id:\n",
-    "        new_id = len(word_to_id)\n",
+    "        new_id = len(word_to_id) # 워드의 갯수가 곧 아이디가 된다 최초시 word_to_id = {0:'you'} \"say\" 두번이지만 duplicate는 고려하지 않음\n",
     "        word_to_id[word] = new_id\n",
     "        id_to_word[new_id] = word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{0: 'you', 1: 'say', 2: 'goodbye', 3: 'and', 4: 'i', 5: 'hello', 6: '.'}"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
    "source": [
@@ -128,58 +128,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'you': 0, 'say': 1, 'goodbye': 2, 'and': 3, 'i': 4, 'hello': 5, '.': 6}"
       ]
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
-    "word_to_id"
+    "word_to_id # encode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'say'"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 13
     }
    ],
    "source": [
-    "id_to_word[1]"
+    "id_to_word[1] # decode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "5"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 14
     }
    ],
    "source": [
@@ -188,18 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([0, 1, 2, 3, 4, 1, 5, 6])"
       ]
      },
-     "execution_count": 22,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 15
     }
    ],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,12 +237,12 @@
     "\n",
     "    corpus = np.array([word_to_id[w] for w in words])\n",
     "\n",
-    "    return corpus, word_to_id, id_to_word"
+    "    return corpus, word_to_id, id_to_word # 문장을 넣으면 숫자로 바뀌어서 출력"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,6 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 동시발생행렬 자동생성\n",
     "def create_co_matrix(corpus, vocab_size, window_size=1):\n",
     "    corpus_size = len(corpus)\n",
     "    co_matrix = np.zeros((vocab_size, vocab_size), dtype=np.int32)\n",
@@ -485,7 +486,7 @@
    "outputs": [],
    "source": [
     "def cos_similarity(x, y, eps=1e-8):\n",
-    "    nx = x / (np.sqrt(np.sum(x ** 2)) + eps)\n",
+    "    nx = x / (np.sqrt(np.sum(x ** 2)) + eps) # 위와 같으나 분모가 0이 되면 안되기 때문에 미세한 eps를 더함\n",
     "    ny = y / (np.sqrt(np.sum(y ** 2)) + eps)\n",
     "    return np.dot(nx, ny)"
    ]
@@ -523,16 +524,18 @@
     "text = 'You say goodbye and I say hello.'\n",
     "corpus, word_to_id, id_to_word = preprocess(text)\n",
     "print(corpus)\n",
-    "vocab_size = len(word_to_id)\n",
-    "print(vocab_size)\n",
-    "C = create_co_matrix(corpus, vocab_size)\n",
+    "#전처리 끝\n",
+    "\n",
+    "vocab_size = len(word_to_id) \n",
+    "print(vocab_size) # 7\n",
+    "C = create_co_matrix(corpus, vocab_size) #Co-matrix 동시발생행렬\n",
     "print(C)\n",
     "c0 = C[word_to_id['you']]  # \"you\"의 단어 벡터\n",
     "c1 = C[word_to_id['i']]    # \"i\"의 단어 벡터\n",
     "\n",
     "print(c0)\n",
     "print(c1)\n",
-    "print(cos_similarity(c0, c1))"
+    "print(cos_similarity(c0, c1)) # \"you\" 하고 \"i\" 는 약 70% 유사한 단어이다"
    ]
   },
   {
@@ -669,9 +672,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.6 64-bit ('Sung_Kim_ML-2tXuaA7I': venv)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -683,7 +685,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
+  },
+  "interpreter": {
+   "hash": "77b2501f97319d5135793e0e344f2f7dc2819a253634fa0048138aac158087f8"
   }
  },
  "nbformat": 4,
