--- a/ch02/2_4.ipynb
+++ b/ch02/2_4.ipynb
@@ -116,7 +116,7 @@
     "W = ppmi(C)\n",
     "\n",
     "# SVD\n",
-    "U, S, V = np.linalg.svd(W)\n",
+    "U, S, V = np.linalg.svd(W) #특잇값 분해\n",
     "\n",
     "np.set_printoptions(precision=3)  # 유효 자릿수를 세 자리로 표시"
    ]
@@ -236,9 +236,9 @@
     "\n",
     "corpus, word_to_id, id_to_word = ptb.load_data('train')\n",
     "\n",
-    "print('말뭉치 크기:', len(corpus))\n",
-    "print('corpus[:30]:', corpus[:30])\n",
-    "print(len(id_to_word))\n",
+    "print('말뭉치 크기:', len(corpus)) #말뭉치 크기 929589\n",
+    "print('corpus[:30]:', corpus[:30]) # 모든 단어가 숫자로 되어있음. 우리가 만든 ID형태로 되어있음\n",
+    "print(len(id_to_word)) # 10000개 어휘사전\n",
     "print('id_to_word[0]:', id_to_word[0])\n",
     "print('id_to_word[1]:', id_to_word[1])\n",
     "print('id_to_word[2]:', id_to_word[2])\n",
@@ -424,27 +424,27 @@
     "\n",
     "\n",
     "window_size = 2\n",
-    "wordvec_size = 100\n",
+    "wordvec_size = 100 # 이미 U를 깎은 것과 같은 효과\n",
     "\n",
     "corpus, word_to_id, id_to_word = ptb.load_data('train')\n",
     "vocab_size = len(word_to_id)\n",
     "print('동시발생 수 계산 ...')\n",
-    "C = create_co_matrix(corpus, vocab_size, window_size)\n",
+    "C = create_co_matrix(corpus, vocab_size, window_size) # (10000,10000) 행렬\n",
     "print(C.shape)\n",
     "print('PPMI 계산 ...')\n",
-    "W = ppmi(C, verbose=True)\n",
+    "W = ppmi(C, verbose=True) # 양수로 되어있는 상호정보량, W는 단어의 벡터표현.. 너무 커!\n",
     "\n",
     "print('calculating SVD ...')\n",
     "try:\n",
     "    # truncated SVD (빠르다!)\n",
     "    from sklearn.utils.extmath import randomized_svd\n",
     "    U, S, V = randomized_svd(W, n_components=wordvec_size, n_iter=5,\n",
-    "                             random_state=None)\n",
+    "                             random_state=None) # 잘라서 가볍게 만든 svd\n",
     "except ImportError:\n",
     "    # SVD (느리다)\n",
-    "    U, S, V = np.linalg.svd(W)\n",
+    "    U, S, V = np.linalg.svd(W) # 전통적인 svd\n",
     "\n",
-    "word_vecs = U[:, :wordvec_size]\n",
+    "word_vecs = U[:, :wordvec_size] # 10000열 중에서 100열만 사용하여 U를 깎음. 그래도 그 단어의 의미는 크게 변하지 않음\n",
     "\n",
     "querys = ['you', 'year', 'car', 'toyota']\n",
     "for query in querys:\n",
@@ -452,11 +452,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 어떤 워드를 벡터 형태로 수치로 표현하면 그 단어의 의미를 부여 - 수학적으로, 코사인 유사도로 잴 수가 있고, 그 단어를 벡터로 만들 때 수학적 공식을 사용하여 맥락을 통한 동시행렬을 만들고 그 행렬의 고빈도단어가 너무 많이 나오는 것을 막기 위해서 PMI 지수로 점별 상호정보량을 구한다. 그것을 양의 상호정보량 (PPMI) 로 바꿔서 사용한다. PPMI가 크기 때문에 SVD를 사용하여 특이값 분해하여 크기를 줄이고, 이 후애 대한 일부 열 (wordvec_size) 만 선택해도 결과적으로 그 단어의 코사인 유사도는 바뀌지 않는다. 이런 식으로 단어의 유사도를 잴 수 있다.\n",
+    "\n",
+    "### 하지만 이러한 방식도 엄청난 메모리의 낭비와 여타 다른 문제점 때문에 결국 추론기반기법 (deep learning)으로 가는 것이 맞다는 게 학계의 정설"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
