--- a/ch02/SVD.ipynb
+++ b/ch02/SVD.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[3, 6],\n",
@@ -14,24 +15,24 @@
        "       [0, 0]])"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 1
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "A = np.array([[3,6],[2,3],[0,0],[0,0]])\n",
+    "A = np.array([[3,6],[2,3],[0,0],[0,0]]) # X = (4,2)\n",
     "A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[45, 24,  0,  0],\n",
@@ -40,13 +41,12 @@
        "       [ 0,  0,  0,  0]])"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
-    "U = np.dot(A , A.T)  # (4, 2)(2, 4) => (4,4)\n",
+    "U = np.dot(A , A.T)  # (4, 2)(2, 4) => (4,4) A times A transpose\n",
     "U"
    ]
   },
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "V = np.dot(A.T , A)  # (2, 4)(4, 2) => (2,2)\n",
+    "V = np.dot(A.T , A)  # (2, 4)(4, 2) => (2,2) A transpose times A\n",
     "V"
    ]
   },
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "U_eigen ,U_vector= np.linalg.eig(U)\n",
+    "U_eigen ,U_vector= np.linalg.eig(U) # computes the eigenvalues and right eigenvectors of a square array\n",
     "print(U_eigen)\n",
     "U_vector"
    ]
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "S"
+    "S # 대각선 배열 S 자체는 (m,n) 사이즈이지만 대각산 배열이라 (m,m) 만 도출"
    ]
   },
   {
@@ -222,29 +222,28 @@
     }
    ],
    "source": [
-    "np.diag(S, 1)[:, 1:]"
+    "np.diag(S, 1)[:, 1:] # 1차원으로 나온 S를 실제 대각선 배열로 만듦. 여기까지 특이값분해"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 3., -1.],\n",
-       "       [ 1.,  3.],\n",
-       "       [ 1.,  1.]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'S' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-defd5f807cb5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mU\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mVT\u001b[0m \u001b[0;31m# @ = matmul\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'S' is not defined"
+     ]
     }
    ],
    "source": [
-    "U @ np.diag(S, 1)[:, 1:] @ VT"
+    "U @ np.diag(S, 1)[:, 1:] @ VT # @ = matmul, 특이값분해된 U S VT 로 A 복원. 중요한 점은 U의 몇 개의 엘레멘트만 써도 X 근사치를 복원할 수 있다"
    ]
   },
   {
@@ -257,9 +256,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.6 64-bit ('Sung_Kim_ML-2tXuaA7I': venv)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -271,7 +269,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
+  },
+  "interpreter": {
+   "hash": "77b2501f97319d5135793e0e344f2f7dc2819a253634fa0048138aac158087f8"
   }
  },
  "nbformat": 4,
