--- a/ch03/3_1.ipynb
+++ b/ch03/3_1.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "c = np.array([[1, 0, 0, 0, 0, 0, 0]])\n",
     "W = np.random.randn(7,3)\n",
-    "h = np.matmul(c, W)\n",
+    "h = np.matmul(c, W) # W[0]과 동일\n",
     "print(W[0])\n",
     "print(h)"
    ]
@@ -86,7 +86,7 @@
     "\n",
     "c = np.array([[1, 0, 0, 0, 0, 0, 0]])\n",
     "W = np.random.randn(7, 3)\n",
-    "layer = MatMul(W)\n",
+    "layer = MatMul(W) # 차후에는 비용이 많이 드는 Matmul 말고 중간에 selection 하는 embedding 층으로 바꿀 수 있음\n",
     "h = layer.forward(c)\n",
     "print(W[0])\n",
     "print(h)"
