--- a/ch03/3_2.ipynb
+++ b/ch03/3_2.ipynb
@@ -36,11 +36,11 @@
     "\n",
     "\n",
     "# 샘플 맥락 데이터\n",
-    "c0 = np.array([[1, 0, 0, 0, 0, 0, 0]])\n",
-    "c1 = np.array([[0, 0, 1, 0, 0, 0, 0]])\n",
+    "c0 = np.array([[1, 0, 0, 0, 0, 0, 0]]) # 첫번째 맥락이 \"you\" from \"you say goodbye\" which is the first word from the sentence. Hence the row vect as such\n",
+    "c1 = np.array([[0, 0, 1, 0, 0, 0, 0]]) # 두번째 맥락은 \"goodbye\" which is the third word from the sentence\n",
     "\n",
     "# 가중치 초기화\n",
-    "W_in = np.random.randn(7, 3)\n",
+    "W_in = np.random.randn(7, 3) # 그림 상에 보이는 두 W_in 은 각각 다른 W_in 이 아닌 같은 W_in 이므로 implementation 시에는 variable 하나로 사용\n",
     "W_out = np.random.randn(3, 7)\n",
     "\n",
     "# 계층 생성\n",
