--- a/ch03/3_3.ipynb
+++ b/ch03/3_3.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_one_hot(corpus, vocab_size):\n",
+    "def convert_one_hot(corpus, vocab_size): # same as the to_categorical in TensorFlow\n",
     "    N = corpus.shape[0]\n",
     "\n",
     "    if corpus.ndim == 1:\n",
