--- a/ch03/3_4.ipynb
+++ b/ch03/3_4.ipynb
@@ -21,6 +21,7 @@
     "\n",
     "class SimpleCBOW:\n",
     "    def __init__(self, vocab_size, hidden_size):\n",
+    "        # vocab_size = 7\n",
     "        V, H = vocab_size, hidden_size\n",
     "\n",
     "        # 가중치 초기화\n",
@@ -34,9 +35,10 @@
     "        self.loss_layer = SoftmaxWithLoss()\n",
     "\n",
     "        # 모든 가중치와 기울기를 리스트에 모은다.\n",
+    "        # in_layer 2개, out_layer 하나\n",
     "        layers = [self.in_layer0, self.in_layer1, self.out_layer]\n",
     "        self.params, self.grads = [], []\n",
-    "        for layer in layers:\n",
+    "        for layer in layers: # param 관리\n",
     "            self.params += layer.params\n",
     "            self.grads += layer.grads\n",
     "\n",
@@ -44,8 +46,8 @@
     "        self.word_vecs = W_in\n",
     "        \n",
     "    def forward(self, contexts, target):\n",
-    "        h0 = self.in_layer0.forward(contexts[:, 0])\n",
-    "        h1 = self.in_layer1.forward(contexts[:, 1])\n",
+    "        h0 = self.in_layer0.forward(contexts[:, 0]) # 앞의 맥락\n",
+    "        h1 = self.in_layer1.forward(contexts[:, 1]) # 뒤의 맥락\n",
     "        h = (h0 + h1) * 0.5\n",
     "        score = self.out_layer.forward(h)\n",
     "        loss = self.loss_layer.forward(score, target)\n",
@@ -1124,13 +1126,13 @@
     "batch_size = 3\n",
     "max_epoch = 1000\n",
     "\n",
-    "text = 'You say goodbye and I say hello.'\n",
-    "corpus, word_to_id, id_to_word = preprocess(text)\n",
+    "text = 'You say goodbye and I say hello.' # 유저가 문장을 넣으면\n",
+    "corpus, word_to_id, id_to_word = preprocess(text) # 숫자로 바뀜\n",
     "\n",
     "vocab_size = len(word_to_id)\n",
-    "contexts, target = create_contexts_target(corpus, window_size)\n",
-    "target = convert_one_hot(target, vocab_size)\n",
-    "contexts = convert_one_hot(contexts, vocab_size)\n",
+    "contexts, target = create_contexts_target(corpus, window_size) # 숫자로 바뀐 것을 맥락(context)와 목표(target) 라벨 벡터로 바뀜\n",
+    "target = convert_one_hot(target, vocab_size) # 2차원\n",
+    "contexts = convert_one_hot(contexts, vocab_size) # 3차원\n",
     "\n",
     "model = SimpleCBOW(vocab_size, hidden_size)\n",
     "optimizer = Adam()\n",
