Annotation done till chapter 6

--- a/ch04/4_1.ipynb
+++ b/ch04/4_1.ipynb
@@ -33,11 +33,11 @@
    "source": [
     "import numpy as np\n",
     "W = np.arange(21).reshape(7, 3)\n",
-    "x = np.array([1,0,0,0,0,0,0])\n",
+    "x = np.array([1,0,0,0,0,0,0]) #임의 onehot encoding\n",
     "print(W)\n",
     "h = np.dot(x, W)\n",
-    "print(h)\n",
-    "print(W[0])"
+    "print(h) # 행렬곱이나\n",
+    "print(W[0]) # 선택이나 같은 값 [0 1 2] return"
    ]
   },
   {
@@ -100,8 +100,8 @@
     }
    ],
    "source": [
-    "idx = np.array([1, 0, 3, 0]) # you say goodbye and i say hello .\n",
-    "W[[1,0,3,0]]"
+    "idx = np.array([1, 0, 3, 0]) # you say goodbye and i say hello . 에서 say, you, and, you 를 뽑은 것 과 같음. 여기서 배치처리 하면서 들어온 중복된 you는 역전파 미분할 때 문제가 됨ㅊ \n",
+    "W[[1,0,3,0]] # 인텍스 1 0 3 0 만 꺼내서 새로운 배열을 만드는 python 기법"
    ]
   },
   {
@@ -122,12 +122,14 @@
     "        out = W[idx]\n",
     "        return out\n",
     "\n",
+    "    # 옳은 backward (simplified)\n",
     "    def backward(self, dout):\n",
     "        dW, = self.grads\n",
     "        dW[...] = 0\n",
     "        np.add.at(dW, self.idx, dout)\n",
     "        return None    \n",
-    "    \n",
+    "\n",
+    "#     옳은 backward\n",
     "#     def backward(self, dout):\n",
     "#         dW, = self.grads\n",
     "#         dW[...] = 0\n",
@@ -135,6 +137,7 @@
     "#             dW[word_id] += dout[i]\n",
     "#         return None\n",
     "    \n",
+    "#     옳지 않은 backward    \n",
     "#     def backward(self, dout):\n",
     "#         dW, = self.grads\n",
     "#         dW[...] = 0\n",
@@ -163,8 +166,8 @@
    ],
    "source": [
     "embed = Embedding(W)\n",
-    "out = embed.forward([1,0,3,0])\n",
-    "print(embed.idx)\n",
+    "out = embed.forward([1,0,3,0]) # 선택하기\n",
+    "print(embed.idx) #선택된 idx 기록되어있음\n",
     "print(out)"
    ]
   },
@@ -191,12 +194,22 @@
     }
    ],
    "source": [
-    "dout = np.array([[1,1,1],\n",
-    "                 [2,2,2],\n",
-    "                 [3,3,3],\n",
-    "                 [4,4,4]])\n",
+    "dout = np.array([[1,1,1], # 1번째에 반영\n",
+    "                 [2,2,2], # 0번째에 반영\n",
+    "                 [3,3,3], # 3번쨰에 반영\n",
+    "                 [4,4,4]])# 다시 0번쨰에 반영\n",
     "embed.backward(dout)\n",
-    "embed.grads"
+    "embed.grads\n",
+    "\n",
+    "'''\n",
+    "[array([[6, 6, 6], # [2 2 2] + [4 4 4] 가 올바르게 반영된 모습\n",
+    "        [1, 1, 1],\n",
+    "        [0, 0, 0],\n",
+    "        [3, 3, 3],\n",
+    "        [0, 0, 0],\n",
+    "        [0, 0, 0],\n",
+    "        [0, 0, 0]])]\n",
+    "'''"
    ]
   },
   {
@@ -205,6 +218,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "    # 옳지 않은 backward \n",
+    "    # 같은 행이 선택되면 미분값이 이 전 미분값을 덮어씌우버림\n",
     "    def backward(self, dout):\n",
     "        dW, = self.grads\n",
     "        dW[...] = 0\n",
@@ -218,6 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "    # 옳은 backward\n",
     "    def backward(self, dout):\n",
     "        dW, = self.grads\n",
     "        dW[...] = 0\n",
@@ -232,6 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "    # 옳은 backward (simplified)\n",
     "    def backward(self, dout):\n",
     "        dW, = self.grads\n",
     "        dW[...] = 0\n",
@@ -255,7 +272,7 @@
    "source": [
     "dW = np.zeros(5)\n",
     "idx = np.array([0,1,2,0])\n",
-    "np.add.at(dW, idx, 1)\n",
+    "np.add.at(dW, idx, 1) # add.at(list, index, 1) 은 list 의 given index에 1을 더하라는 뜻. 0이 두번 있으므로 [2. 1. 1. 0. 0.]가 return\n",
     "print(dW)"
    ]
   },
