--- a/ch04/4_2.ipynb
+++ b/ch04/4_2.ipynb
@@ -20,6 +20,7 @@
     "import collections\n",
     "\n",
     "\n",
+    "# 원래 CBOW의 거대한 행렬의 곱을 간소화한 모델\n",
     "class EmbeddingDot:\n",
     "    def __init__(self, W):\n",
     "        self.embed = Embedding(W)\n",
@@ -29,7 +30,7 @@
     "\n",
     "    def forward(self, h, idx):\n",
     "        target_W = self.embed.forward(idx)\n",
-    "        out = np.sum(target_W * h, axis=1)\n",
+    "        out = np.sum(target_W * h, axis=1) #target_W * h 내적 구해져있음\n",
     "        self.cache = (h, target_W)\n",
     "        return out\n",
     "\n",
@@ -65,7 +66,7 @@
     "h = np.arange(9).reshape(3,3)\n",
     "idx = np.array([0,3,1])\n",
     "embed = EmbeddingDot(W)\n",
-    "target_W = embed.forward(h, idx)\n",
+    "target_W = embed.forward(h, idx) #Wout에서 필요한 것만 꺼낸 것 \n",
     "target_W"
    ]
   },
@@ -78,18 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "9"
       ]
      },
-     "execution_count": 49,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
    "source": [
@@ -156,7 +157,7 @@
     }
    ],
    "source": [
-    "np.random.choice(words, size=5)"
+    "np.random.choice(words, size=5) # size만큼의 랜덤한 output이 나옴"
    ]
   },
   {
@@ -176,7 +177,7 @@
     }
    ],
    "source": [
-    "np.random.choice(words, size=5, replace=False)"
+    "np.random.choice(words, size=5, replace=False) #replace=False 중복제거"
    ]
   },
   {
@@ -196,28 +197,28 @@
     }
    ],
    "source": [
-    "p = [0.5, 0.1, 0.05, 0.2, 0.05, 0.1]\n",
-    "np.random.choice(words, p=p)"
+    "p = [0.5, 0.1, 0.05, 0.2, 0.05, 0.1] # you say goodbye I hello .\n",
+    "np.random.choice(words, p=p) #you 의 확률이 가장 높기때문에 you가 제일 많이 나옴"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[0.64196878 0.33150408 0.02652714]\n"
+      "[0.65464647 0.32347952 0.02187401]\n"
      ]
     }
    ],
    "source": [
     "p = [0.7, 0.29, 0.01]\n",
-    "new_p = np.power(p, 0.75)\n",
+    "new_p = np.power(p, 0.75) # 확률이 너무 낮은 애들은 아예 뽑히지 않는 것을 방지하기 위해 0.75 power 보정치를 줌. 확률이 높은 애들은 0.75 power 했을 때 값이 낮아지지만 낮은 애들은 오히려 올라감. 0.75는 fixed된 값이 아니고 이 수가 낮아질수록 보정치가 높아짐\n",
     "new_p /= np.sum(new_p)\n",
     "print(new_p)"
    ]
@@ -290,8 +291,8 @@
     "                p = self.word_p.copy()\n",
     "                target_idx = target[i]\n",
     "                p[target_idx] = 0\n",
-    "                p /= p.sum()\n",
-    "                negative_sample[i, :] = np.random.choice(self.vocab_size, size=self.sample_size, replace=False, p=p)\n",
+    "                p /= p.sum() # 전체에서 자기자신이 차지하는 비울 (빈도 수)구하고 아래 random.choice의 확률로 넣어줌\n",
+    "                negative_sample[i, :] = np.random.choice(self.vocab_size, size=self.sample_size, replace=False, p=p) #랜덤하게 선택하기는 하나 확률 p=p가 가미되어있기 때문에 확률이 높은 애들은 선택확률이 높음\n",
     "        else:\n",
     "            # GPU(cupy）로 계산할 때는 속도를 우선한다.\n",
     "            # 부정적 예에 타깃이 포함될 수 있다.\n",
@@ -363,7 +364,7 @@
    "outputs": [],
    "source": [
     "class NegativeSamplingLoss:\n",
-    "    def __init__(self, W, corpus, power=0.75, sample_size=5):\n",
+    "    def __init__(self, W, corpus, power=0.75, sample_size=5): # 정답 하나에 부정샘플링 5개\n",
     "        self.sample_size = sample_size\n",
     "        self.sampler = UnigramSampler(corpus, power, sample_size)\n",
     "        self.loss_layers = [SigmoidWithLoss() for _ in range(sample_size + 1)]\n",
@@ -411,9 +412,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.6 64-bit ('Sung_Kim_ML-2tXuaA7I': venv)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -425,7 +425,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
+  },
+  "interpreter": {
+   "hash": "77b2501f97319d5135793e0e344f2f7dc2819a253634fa0048138aac158087f8"
   }
  },
  "nbformat": 4,
