--- a/ch05/5_3.ipynb
+++ b/ch05/5_3.ipynb
@@ -47,18 +47,18 @@
     "from common.time_layers import *\n",
     "\n",
     "corpus = np.array([0,1,2,3,4,1,5,6])\n",
-    "print(corpus)\n",
-    "xs = corpus[:-1]  # 입력\n",
+    "print(corpus) # [0 1 2 3 4 1 5 6]\n",
+    "xs = corpus[:-1]  # 입력, 입력은 0~5까지만\n",
     "print(xs)\n",
-    "ts = corpus[1:]   # 출력(정답 레이블)\n",
+    "ts = corpus[1:]   # 출력(정답 레이블) 출력은 1~6까지. 앞의 과거에 몇 단어가 입력되었던 그 다음을 추론하기 때문에 0~5까지 입력되어서 1~6을 출력.\n",
     "print(ts)\n",
     "\n",
     "batch_size = 1\n",
-    "time_size = 3\n",
-    "batch_x = np.empty((batch_size, time_size), dtype='i')\n",
-    "print(batch_x.shape)\n",
+    "time_size = 3 # 한번에 3단어씩\n",
+    "batch_x = np.empty((batch_size, time_size), dtype='i') #(1,3) 배열이 비어있는 채로 생성\n",
+    "print(batch_x.shape) # (1,3)\n",
     "\n",
-    "batch_x[0] = xs[:3]\n",
+    "batch_x[0] = xs[:3] # 빈 곳에다가 [0,1,2]를 batch_x의 첫번째 행에 넣음 [[0,1,2]]\n",
     "print(batch_x)\n",
     "\n",
     "batch_t = np.empty((batch_size, time_size), dtype='i')\n",
@@ -74,12 +74,13 @@
     "# out = embed.forward(batch_x)\n",
     "# print(out)\n",
     "\n",
-    "out = np.empty((1, 3, 4), dtype='f')\n",
+    "out = np.empty((1, 3, 4), dtype='f') # 1면 3행 4열. 왜 3행 4열이냐면 you, say goodbye 세 단어를 뽑을 것이고, 한 단어에 해당하는 벡터가 (1,4)이기 때문에 4열\n",
     "\n",
     "for t in range(3):\n",
-    "    out[:, t, :] = embed_W[batch_x[:, t]]\n",
+    "    out[:, t, :] = embed_W[batch_x[:, t]] # : == 모든 열\n",
     "    \n",
-    "print(out)"
+    "print(out) # (미니배치 수, 타임 펼친 수, 단어 하나의 백터 수) = (N,T,D)\n",
+    "# common에 timelayer 확인"
    ]
   },
   {
