--- a/ch06/6_3.ipynb
+++ b/ch06/6_3.ipynb
@@ -37,7 +37,7 @@
     "        Wx, Wh, b = self.params\n",
     "        N, H = h_prev.shape\n",
     "\n",
-    "        A = np.dot(x, Wx) + np.dot(h_prev, Wh) + b\n",
+    "        A = np.dot(x, Wx) + np.dot(h_prev, Wh) + b # Wx, Wh, b 는 각각 하나가 아나리 f, g, i, o 가 다 모여있는 것\n",
     "\n",
     "        f = A[:, :H]\n",
     "        g = A[:, H:2*H]\n",
