--- a/ch06/6_5.ipynb
+++ b/ch06/6_5.ipynb
@@ -20,9 +20,9 @@
     "from common.base_model import BaseModel\n",
     "\n",
     "\n",
-    "class BetterRnnlm(BaseModel):\n",
+    "class BetterRnnlm(BaseModel): #LSTM 추가개선\n",
     "    '''\n",
-    "     LSTM 계층을 2개 사용하고 각 층에 드롭아웃을 적용한 모델이다.\n",
+    "     LSTM 계층을 2개 사용하고 각 층에 드롭아웃을 적용한 모델이다. LSTM 계층 2개를 수직으로 쌓으면 더 학습이 잘된다.\n",
     "     아래 [1]에서 제안한 모델을 기초로 하였고, [2]와 [3]의 가중치 공유(weight tying)를 적용했다.\n",
     "\n",
     "     [1] Recurrent Neural Network Regularization (https://arxiv.org/abs/1409.2329)\n",
@@ -45,12 +45,12 @@
     "\n",
     "        self.layers = [\n",
     "            TimeEmbedding(embed_W),\n",
+    "            TimeDropout(dropout_ratio), # LSTM 의 안에 넣어서 시계열 방향으로 넣은게 아닌 수직으로 스택\n",
+    "            TimeLSTM(lstm_Wx1, lstm_Wh1, lstm_b1, stateful=True), # LSTM 1\n",
     "            TimeDropout(dropout_ratio),\n",
-    "            TimeLSTM(lstm_Wx1, lstm_Wh1, lstm_b1, stateful=True),\n",
+    "            TimeLSTM(lstm_Wx2, lstm_Wh2, lstm_b2, stateful=True), # LSTM 2\n",
     "            TimeDropout(dropout_ratio),\n",
-    "            TimeLSTM(lstm_Wx2, lstm_Wh2, lstm_b2, stateful=True),\n",
-    "            TimeDropout(dropout_ratio),\n",
-    "            TimeAffine(embed_W.T, affine_b)  # weight tying!!\n",
+    "            TimeAffine(embed_W.T, affine_b)  # weight tying!! embedding 층에 있었던 정보 (embed_W) 를 이곳 Affine층으로 초월해서 집어 넣음 - 가중치 공유 residual connection\n",
     "        ]\n",
     "        self.loss_layer = TimeSoftmaxWithLoss()\n",
     "        self.lstm_layers = [self.layers[2], self.layers[4]]\n",
