--- a/ch04/4_3.ipynb
+++ b/ch04/4_3.ipynb
@@ -32,7 +32,7 @@
     "        V, H = vocab_size, hidden_size\n",
     "\n",
     "        # 가중치 초기화\n",
-    "        W_in = 0.01 * np.random.randn(V, H).astype('f')\n",
+    "        W_in = 0.01 * np.random.randn(V, H).astype('f') # (10000, 100)\n",
     "        W_out = 0.01 * np.random.randn(V, H).astype('f')\n",
     "\n",
     "        # 계층 생성\n",
@@ -107,7 +107,7 @@
     "        # 인스턴스 변수에 단어의 분산 표현을 저장한다.\n",
     "        self.word_vecs = W_in\n",
     "\n",
-    "    def forward(self, contexts, target):\n",
+    "    def forward(self, contexts, target): \n",
     "        h = self.in_layer.forward(target)\n",
     "\n",
     "        loss = 0\n",
@@ -193,30 +193,30 @@
     "\n",
     "\n",
     "# 하이퍼파라미터 설정\n",
-    "window_size = 5\n",
-    "hidden_size = 100\n",
+    "window_size = 5 # 1로 하면 학습이 잘 안되기 때문에 5로 설정. 이 때문에 맥락벡터가 굉장히 커짐 \n",
+    "hidden_size = 100 # 은닉층의 뉴런 수\n",
     "batch_size = 100\n",
     "max_epoch = 10\n",
     "\n",
     "# 데이터 읽기\n",
-    "corpus, word_to_id, id_to_word = ptb.load_data('train')\n",
+    "corpus, word_to_id, id_to_word = ptb.load_data('train') # 펜트리 뱅크 로드\n",
     "vocab_size = len(word_to_id)\n",
     "print(\"vocab_size=\", vocab_size)\n",
     "print(\"corpus_size=\", len(corpus))\n",
     "\n",
-    "contexts, target = create_contexts_target(corpus, window_size)\n",
-    "print(\"contexts.shape=\", contexts.shape)\n",
+    "contexts, target = create_contexts_target(corpus, window_size) # window_size 는 context의 앞과 뒷 단어의 갯수, target은 하나. target은 정답확인용, contexts는 입력으로 사용\n",
+    "print(\"contexts.shape=\", contexts.shape) # (929579, 10)\n",
     "if config.GPU:\n",
     "    contexts, target = to_gpu(contexts), to_gpu(target)\n",
     "\n",
     "# 모델 등 생성\n",
-    "model = CBOW(vocab_size, hidden_size, window_size, corpus)\n",
+    "model = CBOW(vocab_size, hidden_size, window_size, corpus) # vocab_size 는 어휘 수 (어휘사전의 크기)\n",
     "# model = SkipGram(vocab_size, hidden_size, window_size, corpus)\n",
     "optimizer = Adam()\n",
     "trainer = Trainer(model, optimizer)\n",
     "\n",
     "# 학습 시작\n",
-    "trainer.fit(contexts, target, max_epoch, batch_size)\n",
+    "trainer.fit(contexts, target, max_epoch, batch_size) #context는 x, target은 y의 역할\n",
     "trainer.plot()\n",
     "\n",
     "# 나중에 사용할 수 있도록 필요한 데이터 저장\n",
