--- a/ch05/5_5.ipynb
+++ b/ch05/5_5.ipynb
@@ -33,6 +33,7 @@
     "        affine_b = np.zeros(V).astype('f')\n",
     "\n",
     "        # 계층 생성\n",
+    "        # 오른쪽애서 왼쪽으로 가면서 모든 weight 학습\n",
     "        self.layers = [\n",
     "            TimeEmbedding(embed_W),\n",
     "            TimeRNN(rnn_Wx, rnn_Wh, rnn_b, stateful=True),\n",
@@ -106,19 +107,19 @@
     "from simple_rnnlm import SimpleRnnlm\n",
     "\n",
     "corpus, word_to_id, id_to_word = ptb.load_data('train')\n",
-    "print(corpus.shape)\n",
-    "print(corpus[:100])\n",
+    "print(corpus.shape) # (929589,)\n",
+    "print(corpus[:100]) # 단어의 id 100개\n",
     "print(type(word_to_id))\n",
-    "print(id_to_word[24])\n",
+    "print(id_to_word[24]) # <eos> == end of sentence. \n",
     "\n",
     "for i in range(100):\n",
     "    print(id_to_word[corpus[i]], end=' ')\n",
-    "print()\n",
+    "print() # <unk> == 사전에 없는 희소단어, N == 숫자\n",
     "\n",
     "print(word_to_id['centrust'])\n",
     "\n",
     "vocab_size = int(max(corpus) + 1)\n",
-    "print('말뭉치 크기: %d, 어휘 수: %d' % (len(corpus), vocab_size))\n",
+    "print('말뭉치 크기: %d, 어휘 수: %d' % (len(corpus), vocab_size)) # 929589, 10000\n",
     "print(len(word_to_id))"
    ]
   },
@@ -258,17 +259,19 @@
     "\n",
     "\n",
     "# 하이퍼파라미터 설정\n",
-    "batch_size = 10\n",
-    "wordvec_size = 100\n",
-    "hidden_size = 100 # RNN의 은닉 상태 벡터의 원소 수\n",
-    "time_size = 5     # Truncated BPTT가 한 번에 펼치는 시간 크기\n",
+    "batch_size = 10 # 문장 10개씩 동시 학습, N\n",
+    "wordvec_size = 100 # D\n",
+    "hidden_size = 100 # RNN의 은닉 상태 벡터의 원소 수, h\n",
+    "time_size = 5     # Truncated BPTT가 한 번에 펼치는 시간 크기, 5단어씩 들어감. 5단어씩 10 문장 = 한번에 50단어 학습, t\n",
     "lr = 0.1\n",
     "max_epoch = 100\n",
+    "# 전체 단어 ~900000, 50단어씩  -> ~900000/50 = 18000 미니배치 돌림. 이를 외각에서 100번 더 돌리도록 설정\n",
     "\n",
     "# 학습 데이터 읽기(전체 중 1000개만)\n",
     "corpus, word_to_id, id_to_word = ptb.load_data('train')\n",
     "# print('말뭉치 크기: %d, 어휘 수: %d' % (corpus_size, vocab_size))\n",
-    "corpus_size = 1000\n",
+    "\n",
+    "corpus_size = 1000 # 전체 할려면 너무 오래 걸리므로 1000개만 돌리게 함. 실제 학습할떄는 corpus전체 사용\n",
     "corpus = corpus[:corpus_size]\n",
     "vocab_size = int(max(corpus) + 1)\n",
     "\n",
